--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,16 @@
             "email": "oss@gilbertsoft.org"
         }
     ],
-    "support": {
-        "source": "https://github.com/gilbertsoft/test"
-    },
-    "minimum-stability": "stable",
+	"support": {
+		"chat": "https://my.typo3.org/about-mytypo3org/slack",
+		"docs": "https://docs.typo3.org",
+		"issues": "https://forge.typo3.org/projects/typo3cms-core/issues",
+		"rss": "https://typo3.org/rss",
+        "source": "https://github.com/gilbertsoft/test",
+		"general": "https://typo3.org/support/",
+		"slack": "https://typo3.slack.com",
+		"news": "nntp://lists.typo3.org"
+	},
+	"config": {    "minimum-stability": "stable",
     "require": {}
 }
